[package]
name = "resolve"
version = "0.1.0"
authors = ["Gabriel Tutui <gntutui@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.6"
trust-dns = {version = "0.16", default-features = false}
